# numerai

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  numerai_tournament_baseline.ipynb  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.override.yml
notebooks/: 001_base_lightgbm.ipynb  002_dataset_history.ipynb  top100users.ipynb
src/: config.py  main.py
src/code/config/: __init__.py
src/code/libs/: submit.py
src/code/workflow/: main.py
src/config/: __init__.py
src/libs/: napi.py
src/libs/features/: __init__.py
src/libs/utils/: basic.py  data.py  log.py  slack_notify.py  submit.py  top100users.ipynb
src/libs/workflow/: main.py
src/tournament/config/: __init__.py
src/tournament/data/: __init__.py  download_data.py
src/tournament/libs/: metrics.py  submit.py
src/tournament/models/: predict.py  train.py
src/tournament/notebooks/: 001_base_lightgbm.ipynb
src/tournament/workflow/: main.py
